--- a/WeChatTweak/Controller/Base.lproj/TweakPreferencesController.xib
+++ b/WeChatTweak/Controller/Base.lproj/TweakPreferencesController.xib
@@ -18,11 +18,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="140"/>
+            <rect key="frame" x="0.0" y="0.0" width="488" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5by-EJ-3f2">
-                    <rect key="frame" x="278" y="99" width="91" height="25"/>
+                    <rect key="frame" x="278" y="119" width="91" height="25"/>
                     <popUpButtonCell key="cell" type="push" title="Disabled" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="axesIndependently" inset="2" selectedItem="Vcv-eD-OM9" id="8qB-Jj-tlv">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
@@ -42,7 +42,7 @@
                     </connections>
                 </popUpButton>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6x2-KV-p8w">
-                    <rect key="frame" x="278" y="71" width="92" height="25"/>
+                    <rect key="frame" x="278" y="91" width="92" height="25"/>
                     <popUpButtonCell key="cell" type="push" title="Inherited" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="axesIndependently" inset="2" selectedItem="gec-CY-E1x" id="wek-GT-N5V">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
@@ -64,57 +64,8 @@
                         <action selector="switchNotificationTypeAction:" target="-2" id="xjO-Ck-wem"/>
                     </connections>
                 </popUpButton>
-                <stackView distribution="fillEqually" orientation="vertical" alignment="trailing" spacing="12" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ChT-5e-8lm">
-                    <rect key="frame" x="50" y="20" width="220" height="100"/>
-                    <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RFE-oR-GRm">
-                            <rect key="frame" x="153" y="84" width="69" height="16"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Auto login:" usesSingleLineMode="YES" id="UiV-zj-l6I">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B87-eD-uhI">
-                            <rect key="frame" x="36" y="56" width="186" height="16"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Message recalled notification:" usesSingleLineMode="YES" id="UKv-CM-nGt">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eOf-Ts-pZk">
-                            <rect key="frame" x="-2" y="28" width="224" height="16"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Message recalled background color:" usesSingleLineMode="YES" id="8uI-sB-Jzm">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zsd-Bb-6l4">
-                            <rect key="frame" x="58" y="0.0" width="164" height="16"/>
-                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Alfred JSON compressing:" usesSingleLineMode="YES" id="jHw-2a-B2t">
-                                <font key="font" metaFont="system"/>
-                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                            </textFieldCell>
-                        </textField>
-                    </subviews>
-                    <visibilityPriorities>
-                        <integer value="1000"/>
-                        <integer value="1000"/>
-                        <integer value="1000"/>
-                        <integer value="1000"/>
-                    </visibilityPriorities>
-                    <customSpacing>
-                        <real value="3.4028234663852886e+38"/>
-                        <real value="3.4028234663852886e+38"/>
-                        <real value="3.4028234663852886e+38"/>
-                        <real value="3.4028234663852886e+38"/>
-                    </customSpacing>
-                </stackView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kNm-y0-HmG">
-                    <rect key="frame" x="374" y="20" width="96" height="16"/>
+                    <rect key="frame" x="374" y="40" width="96" height="16"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" title="Need to restart" usesSingleLineMode="YES" id="2vl-mc-m3L">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
@@ -122,7 +73,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ylY-lF-oFq">
-                    <rect key="frame" x="278" y="15" width="91" height="25"/>
+                    <rect key="frame" x="278" y="35" width="91" height="25"/>
                     <popUpButtonCell key="cell" type="push" title="Disabled" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="axesIndependently" inset="2" selectedItem="MEN-Kg-wfj" id="taL-8q-Quu">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="menu"/>
@@ -142,30 +93,83 @@
                     </connections>
                 </popUpButton>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="dkE-Ks-I5o" customClass="TweakColorView">
-                    <rect key="frame" x="280" y="46" width="50" height="20"/>
+                    <rect key="frame" x="280" y="66" width="50" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="3qv-Ln-g0w"/>
                         <constraint firstAttribute="width" constant="50" id="Mh6-Tw-cUb"/>
                     </constraints>
                 </customView>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="CnG-gC-wht">
+                    <rect key="frame" x="20" y="20" width="260" height="140"/>
+                    <subviews>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="RFE-oR-GRm">
+                            <rect key="frame" x="173" y="104" width="69" height="16"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Auto login:" usesSingleLineMode="YES" id="UiV-zj-l6I">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="B87-eD-uhI">
+                            <rect key="frame" x="56" y="76" width="186" height="16"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Message recalled notification:" usesSingleLineMode="YES" id="UKv-CM-nGt">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eOf-Ts-pZk">
+                            <rect key="frame" x="18" y="48" width="224" height="16"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Message recalled background color:" usesSingleLineMode="YES" id="8uI-sB-Jzm">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zsd-Bb-6l4">
+                            <rect key="frame" x="78" y="20" width="164" height="16"/>
+                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" alignment="right" title="Alfred JSON compressing:" usesSingleLineMode="YES" id="jHw-2a-B2t">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="eOf-Ts-pZk" firstAttribute="top" secondItem="B87-eD-uhI" secondAttribute="bottom" constant="12" id="4Zb-P2-b4d"/>
+                        <constraint firstAttribute="trailing" secondItem="RFE-oR-GRm" secondAttribute="trailing" constant="20" id="4my-bV-s26"/>
+                        <constraint firstAttribute="bottom" secondItem="zsd-Bb-6l4" secondAttribute="bottom" constant="20" id="8Xz-pW-RjY"/>
+                        <constraint firstItem="zsd-Bb-6l4" firstAttribute="top" secondItem="eOf-Ts-pZk" secondAttribute="bottom" constant="12" id="Hxi-hi-sVa"/>
+                        <constraint firstItem="eOf-Ts-pZk" firstAttribute="leading" secondItem="CnG-gC-wht" secondAttribute="leading" constant="20" id="MpA-tw-mU9"/>
+                        <constraint firstItem="B87-eD-uhI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="CnG-gC-wht" secondAttribute="leading" constant="20" id="VX5-Xu-g4c"/>
+                        <constraint firstItem="RFE-oR-GRm" firstAttribute="top" secondItem="CnG-gC-wht" secondAttribute="top" constant="20" id="Yjc-HA-9ym"/>
+                        <constraint firstAttribute="trailing" secondItem="eOf-Ts-pZk" secondAttribute="trailing" constant="20" id="e3C-2z-znZ"/>
+                        <constraint firstItem="zsd-Bb-6l4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="CnG-gC-wht" secondAttribute="leading" constant="20" id="j7I-cp-Ynq"/>
+                        <constraint firstItem="B87-eD-uhI" firstAttribute="top" secondItem="RFE-oR-GRm" secondAttribute="bottom" constant="12" id="lvx-xW-FUc"/>
+                        <constraint firstAttribute="trailing" secondItem="B87-eD-uhI" secondAttribute="trailing" constant="20" id="pdH-ef-Fhb"/>
+                        <constraint firstItem="RFE-oR-GRm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="CnG-gC-wht" secondAttribute="leading" constant="20" id="sQT-RG-rIf"/>
+                        <constraint firstAttribute="trailing" secondItem="zsd-Bb-6l4" secondAttribute="trailing" constant="20" id="y1N-MH-gol"/>
+                    </constraints>
+                </customView>
             </subviews>
             <constraints>
                 <constraint firstItem="dkE-Ks-I5o" firstAttribute="leading" secondItem="6x2-KV-p8w" secondAttribute="leading" id="0D5-BC-meJ"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kNm-y0-HmG" secondAttribute="trailing" constant="12" id="1wx-JF-wqN"/>
-                <constraint firstAttribute="bottom" secondItem="ChT-5e-8lm" secondAttribute="bottom" constant="20" id="HaO-CB-AZT"/>
-                <constraint firstItem="5by-EJ-3f2" firstAttribute="centerY" secondItem="RFE-oR-GRm" secondAttribute="centerY" id="J0G-jo-ZDH"/>
-                <constraint firstItem="5by-EJ-3f2" firstAttribute="leading" secondItem="ChT-5e-8lm" secondAttribute="trailing" constant="10" id="LRm-RB-MSA"/>
+                <constraint firstAttribute="trailing" secondItem="kNm-y0-HmG" secondAttribute="trailing" constant="20" id="1wx-JF-wqN"/>
+                <constraint firstItem="CnG-gC-wht" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="39d-pW-K4o"/>
+                <constraint firstItem="dkE-Ks-I5o" firstAttribute="centerY" secondItem="eOf-Ts-pZk" secondAttribute="centerY" id="3Rw-NE-qcj"/>
+                <constraint firstItem="CnG-gC-wht" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="8WZ-he-gU7"/>
+                <constraint firstItem="6x2-KV-p8w" firstAttribute="centerY" secondItem="B87-eD-uhI" secondAttribute="centerY" id="AoR-VU-Kfz"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6x2-KV-p8w" secondAttribute="trailing" constant="20" id="Ogo-mH-KcV"/>
+                <constraint firstItem="ylY-lF-oFq" firstAttribute="centerY" secondItem="zsd-Bb-6l4" secondAttribute="centerY" id="V7I-zB-uKR"/>
                 <constraint firstItem="kNm-y0-HmG" firstAttribute="leading" secondItem="ylY-lF-oFq" secondAttribute="trailing" constant="10" id="Wb3-NG-vyn"/>
-                <constraint firstItem="ylY-lF-oFq" firstAttribute="centerY" secondItem="zsd-Bb-6l4" secondAttribute="centerY" id="dN4-ow-sAV"/>
+                <constraint firstItem="5by-EJ-3f2" firstAttribute="leading" secondItem="CnG-gC-wht" secondAttribute="trailing" id="eJ2-QW-u3A"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5by-EJ-3f2" secondAttribute="trailing" constant="20" id="hR7-NT-6bJ"/>
+                <constraint firstItem="5by-EJ-3f2" firstAttribute="centerY" secondItem="RFE-oR-GRm" secondAttribute="centerY" id="hqz-Vh-9UY"/>
                 <constraint firstItem="ylY-lF-oFq" firstAttribute="leading" secondItem="dkE-Ks-I5o" secondAttribute="leading" id="i6R-3k-JnB"/>
-                <constraint firstItem="ChT-5e-8lm" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="m4w-Ya-3LB"/>
-                <constraint firstItem="6x2-KV-p8w" firstAttribute="centerY" secondItem="B87-eD-uhI" secondAttribute="centerY" id="nYC-u6-mfD"/>
                 <constraint firstItem="6x2-KV-p8w" firstAttribute="leading" secondItem="5by-EJ-3f2" secondAttribute="leading" id="r01-5M-8C4"/>
-                <constraint firstItem="dkE-Ks-I5o" firstAttribute="centerY" secondItem="eOf-Ts-pZk" secondAttribute="centerY" id="s5x-XK-Hg2"/>
-                <constraint firstItem="ChT-5e-8lm" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="50" id="uaZ-h8-DHG"/>
                 <constraint firstItem="kNm-y0-HmG" firstAttribute="centerY" secondItem="ylY-lF-oFq" secondAttribute="centerY" id="wm4-bT-e48"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="179.5"/>
+            <point key="canvasLocation" x="120" y="179"/>
         </customView>
     </objects>
 </document>
